test/libsolidity/syntaxTests/nameAndTypeResolution/496_builtin_depositroot_reject_gas.hyp
contract C {
    function f() public {
        depositroot.gas();
    }
}
// ----
// TypeError 9582: (47-62): Member "gas" not found or not visible after argument-dependent lookup in function (bytes memory,bytes memory,bytes memory,bytes memory) pure returns (bytes32).
